2005-12-14  Edgard Lima <edgard.lima@indt.org.br>

	* configure.ac:
	* ext/Makefile.am:
	* ext/xvid/gstxvid.c:
	* ext/xvid/gstxvid.h:
	* ext/xvid/gstxviddec.c:
	* ext/xvid/gstxviddec.h:
	* ext/xvid/gstxvidenc.c:
	* ext/xvid/gstxvidenc.h:
	xviddec and xvideenc ported to 0.10
		

2005-12-14  Edgard Lima <edgard.lima@indt.org.br>

	* configure.ac:
	* ext/Makefile.am:
	* ext/dts/Makefile.am:
	* ext/dts/gstdtsdec.c:
	* ext/dts/gstdtsdec.h:
	dtsdec ported to 0.10

2005-12-12  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/ivorbis/vorbisfile.c: (gst_ivorbisfile_loop):
	* ext/libmms/gstmms.c: (gst_mms_src_query), (gst_mms_create):
	* ext/musepack/gstmusepackdec.c: (gst_musepackdec_src_query),
	(gst_musepackdec_loop):
	* ext/swfdec/gstswfdec.c: (gst_swfdec_video_link),
	(gst_swfdec_src_query):
	* ext/wavpack/gstwavpackparse.c: (gst_wavpack_parse_src_query):
	  GstObjects must be unref'ed with gst_object_unref() instead of
	  g_object_unref(), otherwise things break for GLib-2.6 users.

2005-12-12  David Schleef  <ds@schleef.org>

	* ext/swfdec/gstswfdec.c: (gst_swfdecbuffer_get_type),
	(gst_swfdecbuffer_class_init), (gst_swfdecbuffer_finalize),
	(gst_swfdec_buffer_from_swf), (gst_swfdec_render): Add a subclass
	of GstBuffer that wraps SwfdecBuffers.  Fix a massive memleak
	because the video buffers previously never got freed.

2005-12-11  Edgard Lima <edgard.lima@indt.org.br>

	* ext/libmms/gstmms.c:
	Just removed a weird printf ;-)

2005-12-11  Edgard Lima <edgard.lima@indt.org.br>

	* configure.ac:
	* ext/libmms/gstmms.c:
	* ext/libmms/gstmms.h:
	Added suport to mmsh. There's still a sucks msg "ERROR: Pipeline cant
	PREROOL..." to be fixed.

2005-12-09  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/faad/gstfaad.c: (gst_faad_chanpos_to_gst),
	(gst_faad_update_caps):
	  Assume that an unknown channel mapping with 2 channels
	  is stereo and play it that way instead of erroring.

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_loop_header),